{
    "name": "LauncherInputActionMappings",
    "maps": [
        {
            "name": "Launcher",
            "id": "c5d3eede-322e-4470-9263-5b0a29bdb5b9",
            "actions": [
                {
                    "name": "ToogleView",
                    "type": "Button",
                    "id": "f08dcef6-a59e-45d7-8c10-9aa0e7787e09",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnterUAEWaters",
                    "type": "Button",
                    "id": "ac41a82b-3609-4470-b7ed-11064a9ba487",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3078a785-575f-45a9-9d7c-9ed63571e990",
                    "path": "<Keyboard>/#(X)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToogleView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2fcbf3f1-e4e3-4119-b76b-1cc662e82037",
                    "path": "<OculusTouchController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToogleView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d641e782-edf9-40c1-8d47-4470241c3454",
                    "path": "<Keyboard>/#(A)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnterUAEWaters",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f09a58f1-753d-4c7a-abd8-79373aeb2289",
                    "path": "<OculusTouchController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnterUAEWaters",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}